# ppd_lab1_2

./: CMakeLists.txt  main.cpp  outC.csv  scriptC.ps1
convolutor/: Convolutor.cpp  Convolutor.h
convolutor/convolutionStrategy/: IConvolutionStrategy.h
convolutor/convolutionStrategy/parallelHash/: ParallelHashConvolutor.cpp  ParallelHashConvolutor.h
convolutor/convolutionStrategy/parallelOnBlocks/: ParallelOnBlocksConvolutor.cpp  ParallelOnBlocksConvolutor.h
convolutor/convolutionStrategy/parallelOnLines/: ParallelOnLinesConvolutor.cpp  ParallelOnLinesConvolutor.h
convolutor/convolutionStrategy/sequential/: SequentialConvolutor.cpp  SequentialConvolutor.h
reader/: Reader.cpp  Reader.h
reader/memoryAllocationStrategy/: DynamicMatrix.cpp  DynamicMatrix.h  DynamicMemoryAllocation.cpp  DynamicMemoryAllocation.h  IMatrix.h  IMemoryAllocationStrategy.h  StaticMatrix.cpp  StaticMatrix.h  StaticMemoryAllocation.cpp  StaticMemoryAllocation.h
